--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 
             <%= link_to(user_path(current_user)) do %>
               <div class="avatar-navi">
-                <%= image_tag current_user.avatar.url, class: "img-fluid rounded" %>
+                <%= image_tag current_user.photo.url, class: "img-fluid rounded" %>
               </div>
             <% end %>
 
