--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Photo:</strong>
-  <%= image_tag @restaurant.photo, width: '600px' %>
+  <%= image_tag @restaurant.photo.url, width: '600px' %>
 </p>
 
 <p>
