--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,19 @@
 
   <body>
     <!-- 套用Bootstrap 4的navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #77FFCC;">
       <%= link_to root_path do %>
         <%#= image_tag "wall.jpg", class: "rounded-circle avatar-navi" %>
       <% end %>
-      <a class="navbar-brand" href="<%= root_path %>">NaviHalal</a>
+      <a class="navbar-brand text-success" href="<%= root_path %>">NaviHalal</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+        <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
             <%#= link_to "Feed", feeds_posts_path, class: "nav-link"%>
@@ -43,14 +47,11 @@
             <% end %>
 
             <li><%= link_to '登出', destroy_user_session_path, method: :delete, class: "nav-link" %></li>
-
             <%= link_to(user_path(current_user)) do %>
               <div class="avatar-navi">
-                <%= image_tag current_user.photo.url, class: "img-fluid rounded" %>
+                <%= image_tag current_user.photo.url, class: "img-fluid rounded", width: '50px' %>
               </div>
             <% end %>
-
-            
           <% else %>
 
             <li><%= link_to '登入', new_user_session_path, class: "nav-link" %></li>
