add googl map api

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -58,13 +58,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :lat %>
-    <%= form.number_field :lat %>
+    <%= form.label :latitude %>
+    <%= form.number_field :latitude %>
   </div>
 
   <div class="field">
-    <%= form.label :lon %>
-    <%= form.number_field :lon %>
+    <%= form.label :longitude %>
+    <%= form.number_field :longitude %>
   </div>
 
   <div class="actions">
