--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,6 +2,10 @@
 
 <h1>Restaurants</h1>
 
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+
 <table>
   <thead>
     <tr>
@@ -14,8 +18,8 @@
       <th>Tel</th>
       <th>Viewed count</th>
       <th>User</th>
-      <th>Lat</th>
-      <th>Lon</th>
+      <th>Latitude</th>
+      <th>longitude</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -32,8 +36,8 @@
         <td><%= restaurant.tel %></td>
         <td><%= restaurant.viewed_count %></td>
         <td><%= restaurant.user_id %></td>
-        <td><%= restaurant.lat %></td>
-        <td><%= restaurant.lon %></td>
+        <td><%= restaurant.latitude %></td>
+        <td><%= restaurant.longitude %></td>
         <td><%= link_to 'Show', restaurant %></td>
         <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
         <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -45,3 +49,12 @@
 <br>
 
 <%= link_to 'New Restaurant', new_restaurant_path %>
+
+<script type='text/javascript'>
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+    markers = handler.addMarkers(<%=raw @hash.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
