--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -46,13 +46,13 @@
 </p>
 
 <p>
-  <strong>Lat:</strong>
-  <%= @restaurant.lat %>
+  <strong>Latitude:</strong>
+  <%= @restaurant.latitude %>
 </p>
 
 <p>
-  <strong>Lon:</strong>
-  <%= @restaurant.lon %>
+  <strong>Longitude:</strong>
+  <%= @restaurant.longitude %>
 </p>
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
