--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Restaurants</h1>
-
-<div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
+<div id="map-rwd" style='width: 100%;'>
+  <div id="map" style='width: 100%; height: 400px;'></div>
 </div>
 
 <table>
