--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require easy-autocomplete
+ *= require easy-autocomplete.themes
  */
 
-@import "bootstrap";
 @import "normalize";
+@import "bootstrap";
 @import 'style';
