mask handler.fitMapToBounds() for google map on restaurant index view

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -97,7 +97,7 @@
       return marker;
     });
     handler.bounds.extendWith(Gmaps.store.markers);
-    handler.fitMapToBounds(); //some PC can't work fine if don't mask this code
+    //handler.fitMapToBounds(); //some PC can't work fine if don't mask this code
     //handler.getMap().setCenter(new google.maps.LatLng(35.720969, 139.735877));
     handler.getMap().setZoom(2);
     //console.log(Gmaps.store.markers);
