--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -82,6 +82,67 @@
   </div>
 
 <script type='text/javascript'>
+  var userCurrentPos = {
+    lat: 0.0,
+    lng: 0.0
+  };
+
+  var ha_options = {
+    enableHighAccuracy: true,
+    timeout: 2500,
+    maximumAge: 0
+  };
+
+  var la_options = {
+    enableHighAccuracy: false,
+    timeout: 2500,
+    maximumAge: 0
+  };
+
+
+  function setCurrentPos(pos){
+    userCurrentPos = {
+      lat: pos.coords.latitude,
+      lng: pos.coords.longitude
+    };
+  }
+
+  function hasUserCurrentPos(){
+    if(userCurrentPos.lat!=0.0 && userCurrentPos.lng!=0.0){
+      return true;
+    }
+    return false;
+  }
+
+  function displayGcpErrorMsg(err){
+    console.warn('ERROR(' + err.code + '): ' + err.message);
+  }
+
+  function gcp_success(pos) {
+    setCurrentPos(pos);
+  };
+
+  function getUserCurrentPosition(){
+    function error(err) {
+      displayGcpErrorMsg(err);
+    };
+
+    function gcp_error(err) {
+      displayGcpErrorMsg(err);
+      navigator.geolocation.getCurrentPosition(gcp_success, error, la_options);
+    };
+
+    navigator.geolocation.getCurrentPosition(gcp_success, gcp_error, ha_options);
+  };
+
+  function displayOnMap(position){
+    var marker = handler.addMarker({
+      lat: position.coords.latitude,
+      lng: position.coords.longitude
+    });
+    handler.map.centerOn(marker);
+  };
+
   var handler = Gmaps.build('Google');
   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
     markers = <%= raw @hash.to_json %>
@@ -99,7 +160,26 @@
     handler.bounds.extendWith(Gmaps.store.markers);
     //handler.fitMapToBounds(); //some PC can't work fine if don't mask this code
     //handler.getMap().setCenter(new google.maps.LatLng(35.720969, 139.735877));
+
+    if(0){
+      getUserCurrentPosition();
+      if(hasUserCurrentPos()){
+        handler.getMap().setCenter(new google.maps.LatLng(userCurrentPos.lat, userCurrentPos.lng));
+        handler.getMap().setZoom(10);
+      }else{
+        handler.getMap().setZoom(2);
+      }
+    }
     handler.getMap().setZoom(2);
+
+    if(navigator.geolocation){
+      navigator.geolocation.getCurrentPosition(displayOnMap);
+      handler.getMap().setZoom(14);
+      console.log("---------------- geolocaion ----------------");
+    }else{
+      handler.getMap().setZoom(2);
+    }
+
     //console.log(Gmaps.store.markers);
     if(0){
       $.each(Gmaps.store.markers, function() {
