--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -83,7 +83,8 @@
 
 <script type='text/javascript'>
   var anycGeo = true;
-  var handler = null;
+  var handler = null; //google map handler
+  var restaurantMap = {};
   var userCurrentPos = {
     lat: 0.0,
     lng: 0.0
@@ -138,7 +139,7 @@
     function geo_error(err) {
       displayGcpErrorMsg(err);
       if(navigator.geolocation){
-        navigator.geolocation.getCurrentPosition(gcp_success, error, la_options);
+        navigator.geolocation.getCurrentPosition(geo_success, error, la_options);
       }
     };
 
@@ -152,13 +153,34 @@
       lat: position.coords.latitude,
       lng: position.coords.longitude
     });
+    setCurrentPos(position);
     handler.map.centerOn(marker);
   };
+
+  // ---------------------------------------------- //
+  function createGoogleMapDirUrl(start, end){
+    return 'https://www.google.com/maps/dir/'+start+'/'+end;
+  }
+
+  function getDirectionUrl(destination){
+    if(hasUserCurrentPos()){
+      origin = userCurrentPos.lat+','+userCurrentPos.lng;
+      return createGoogleMapDirUrl(origin, destination);
+    }
+    else{
+      return createGoogleMapDirUrl('', destination);
+    }
+  }
+  // ---------------------------------------------- //
 
   handler = Gmaps.build('Google');
   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
     markers = <%= raw @hash.to_json %>
     var restaurants = <%=raw @restaurants.to_json %>;
+    for (var i = 0; i < restaurants.length; i++) {
+        console.log(restaurants[i])
+        restaurantMap[restaurants[i].id] = restaurants[i];
+    }
     Gmaps.store = {}
     Gmaps.store.markers = markers.map(function(m) {
       marker = handler.addMarker(m);
@@ -185,6 +207,7 @@
       }
     }
 
+
     //console.log(Gmaps.store.markers);
     if(0){
       $.each(Gmaps.store.markers, function() {
@@ -205,10 +228,15 @@
         console.log(this.title);
         console.log(this.intro);
         console.log(this.photo);
+        console.log("--------------");
+        console.log(userCurrentPos);
+        //console.log(this);
         document.getElementById("siteModalLongTitle").innerHTML += "<a href=/restaurants/"+this.id+">"+ this.title + "</a>";
         document.getElementById('siteModal-img').src = this.photo;
         document.getElementById('siteModal-content').innerHTML = this.intro;
+        document.getElementById("siteModal-directionurl").href = getDirectionUrl(restaurantMap[this.id].latitude+','+restaurantMap[this.id].latitude);
         $('#siteModalCenter').modal();
+
       });
     }
   });
