--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -49,9 +49,34 @@
 
 <%= link_to 'New Restaurant', new_restaurant_path %>
 
+  <!-- restaurant marker Modal -->
+  <div class="modal fade" id="siteModalCenter" tabindex="-1" role="dialog" aria-labelledby="siteModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-center" id="siteModalLongTitle"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div>
+            <!-- <img id="siteModal-img" alt="Site Photo" width="600" height="600" class="border rounded"> -->
+            <img id="siteModal-img" alt="Site Photo" width="420" class="border rounded">
+          </div>
+          <div id="siteModal-content" style="font-size: 18px;" class="text-center"></div>
+          <div id="siteModal-disdur" style="font-size: 18px;" class="text-center"></div>
+          <div id="siteModal-availableTime" style="font-size: 18px;" class="text-center"></div>
+        </div>
+        <div class="modal-footer">
+          <a id="siteModal-directionurl" href="" target="_blank" class="btn btn-success" role="button" aria-disabled="true">導航</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- restaurant marker Modal -->
-  <div class="modal modal-style fade" id="siteModalCenter" tabindex="-1" role="dialog" aria-labelledby="siteModalLongTitle" aria-hidden="true">
+  <div class="modal modal-style fade" id="siteModalCenter__xx" tabindex="-1" role="dialog" aria-labelledby="siteModalLongTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -74,7 +99,7 @@
             <a id="siteModal-checkin" style="font-size: 16px;  padding: 8px; width:100px;" class="" rel="nofollow"></a>
           </div>
           <div class="col-xs-5 col-xs-offset-2 text-center">
-            <a id="siteModal-directionurl" style=" font-size: 16px; padding: 10px 35px;" class="btn btn-sm btn-main-1-outline" href="" target="_blank">***導航***</a>
+            <a id="siteModal-directionurl" style=" font-size: 16px; padding: 10px 35px;" class="btn btn-sm btn-main-1-outline" href="" target="_blank">導航</a>
           </div>
         </div>
       </div>
